# smash-ml

./: .gitignore  pyproject.toml
smash_ml/: __init__.py  __main__.py  fetch.py  preprocess.py  train.py
smash_ml/queries/: EventEntrants.graphql  EventPhaseGroups.graphql  EventSets.graphql  EventStandings.graphql  PlayerInfo.graphql  TournamentEvents.graphql
tests/: test_smash_ml.py
